--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <img src="7.gif" alt="대체 텍스트">
+    <img src="main_loop_.gif" alt="대체 텍스트">
     <img src="1.jpg">
 </body>
 </html>
